--- a/ledger/templates/api/tables/transactions-table-alt.html
+++ b/ledger/templates/api/tables/transactions-table-alt.html
@@ -17,7 +17,7 @@
                     {% for pair in transactions %}
                     <tr 
                         id="row-{{ pair.current.id }}"
-                        class="clickable-row"
+                        class="clickable-row {% if forloop.first %}table-active{% endif %}"
                         hx-get="{% url 'journal-entry-button' pair.current.id %}?next_transaction_id={{ pair.next.id }}&next_next_transaction_id= {{ pair.next_next.id }}"
                         hx-target="#form"
                     >
