--- a/ledger/templates/api/tables/transactions-table-alt.html
+++ b/ledger/templates/api/tables/transactions-table-alt.html
@@ -1,7 +1,7 @@
 {% load humanize %}
 <div class="row">
     <div class="col">
-        <div id="transactions-table" class="table-responsive" style="max-height: 200px; overflow-y: auto;">
+        <div id="transactions-table" class="table-responsive" style="height: 200px; overflow-y: auto;">
             <table class="table table-hover table-sm">
                 <thead>
                     <tr>
