--- a/ledger/templates/api/views/journal-entry-view-alt.html
+++ b/ledger/templates/api/views/journal-entry-view-alt.html
@@ -1,6 +1,6 @@
 <h2>Journal Entries</h2>
 <div id="table-and-form">
-    <div id="transaction-store" data-transaction-ids="{{ transaction_ids|join:',' }}"></div>
+    {{ transaction_store }}
     <div class="row">
         <div class="col-md-12">
             <div id="table">
