Modification to tax template

--- a/ledger/templates/api/entry_forms/edit-tax-charge-form.html
+++ b/ledger/templates/api/entry_forms/edit-tax-charge-form.html
@@ -77,8 +77,10 @@
                     </tr>
                     {% for taxcharge in latest_taxcharges %}
                     <tr>
-                        <th scope="row">taxcharge.account.name</th>
-                        <td>${{ taxcharge.current_tax|floatformat:2|intcomma }}</td>
+                        <th scope="row">{{ taxcharge.account.name }}</th>
+                        <td>
+                            ${{ taxcharge.current_tax|default_if_none:taxcharge.amount|floatformat:2|intcomma }}
+                        </td>
                     </tr>
                     {% endfor %}
                 </tbody>
