--- a/ledger/templates/api/views/statement.html
+++ b/ledger/templates/api/views/statement.html
@@ -1,4 +1,8 @@
-<h2>{{ title }}</h2>
+<div class="row">
+    <div class="col">
+        <h2>{{ title }}</h2>
+    </div>
+</div>
 
 <div class="row">
     <div class="col">
