Added cash flow warning

--- a/ledger/templates/api/content/cash-flow-content.html
+++ b/ledger/templates/api/content/cash-flow-content.html
@@ -5,6 +5,15 @@
     </div>
 </div>
 <div class="container-fluid">
+    {% if cash_flow_discrepancy %}
+    <div class="row">
+        <div class="col-md-4">
+            <div class="alert alert-danger py-1 px-2 small mb-2" role="alert">
+            ⚠️ Cash flow discrepancy: ${{ cash_flow_discrepancy|default:0|floatformat:2 }}
+            </div>
+        </div>
+    </div>
+    {% endif %}
     <div class="row">
         <div class="col-md-12">
             <div class="row text-center">
