Added validation to check that a JEI must have the transaction amount and account

--- a/ledger/templates/api/entry_forms/journal-entry-item-form.html
+++ b/ledger/templates/api/entry_forms/journal-entry-item-form.html
@@ -29,10 +29,12 @@
     {% endif %}
     {% if form_errors %}
     <div class="row">
-        <div class="col-md-6 alert alert-danger" role="alert">
+        <div class="col-md-6" role="alert">
+            <div class="alert alert-danger" role="alert">
             {% for error in form_errors %}
                 <small>{{ error }}</small><br>
             {% endfor %}
+            </div>
         </div>
     </div>
     {% endif %}
