Updated linking to fix bug on refresh

--- a/ledger/templates/api/entry_forms/transaction-link-form.html
+++ b/ledger/templates/api/entry_forms/transaction-link-form.html
@@ -3,6 +3,7 @@
     method="post"
     hx-post="{% url 'link-transactions'%}"
     hx-target="#table-and-form"
+    hx-swap="outerHTML"
     hx-trigger="submit"
     hx-include="#transactions-filter-form"
 >
