Fixed but that relied on a specific order of transaction and paystub to work

--- a/ledger/templates/api/views/journal-entry-view.html
+++ b/ledger/templates/api/views/journal-entry-view.html
@@ -5,7 +5,7 @@
 {{ filter_form }}
 
 <div id="table-and-form">
-    <div x-data="{ selectedRowId: {{transaction_id}}, rowIndex: {{index}} }">
+    <div x-data="{ selectedRowId: {{transaction_id}}, rowIndex: {{index}}, hasSelectedTransaction: false }">
         <div class="row">
             <div class="col-md-12">
                 <div id="table">
