--- a/ledger/templates/api/tables/paystubs-table.html
+++ b/ledger/templates/api/tables/paystubs-table.html
@@ -62,6 +62,9 @@
                         class="btn btn-primary"
                         x-bind:hx-get="`journal-entries/form/${selectedRowId}/?row_index=${rowIndex}&paystub_id={{ paystub_id }}`"
                         hx-target="#form-div"
+                        x-bind:disabled="!hasSelectedTransaction"
+                        x-bind:class="!hasSelectedTransaction ? 'btn btn-secondary' : 'btn btn-primary'"
+                        x-bind:title="!hasSelectedTransaction ? 'Select a transaction first' : ''"
                     >
                         Fill Paystub<br>
                     </button>
